<resources>
    <string name="app_name">RemoteControler</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="room">Room</string>
    <string name="kitchen">Kitchen</string>
    <string name="garage">Garage</string>
    <string name="bathroom">Bathroom</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lab">Lab</string>
</resources>
